# pointcloud-baseline

./: .gitignore  LICENSE  README.md
baseline/: CMakeLists.txt  main.cpp  tabletop_main.cpp
baseline/include/: cluster_filter.hpp  diff_segmentation.hpp  kdtree.hpp  pcd_io.hpp  pipeline.hpp  plane_filter.hpp  ply_io.hpp  roi_crop.hpp  statistical_filter.hpp  types.hpp  voxel_downsample.hpp
baseline/src/: cluster_filter.cpp  diff_segmentation.cpp  kdtree.cpp  pcd_io.cpp  pipeline.cpp  plane_filter.cpp  ply_io.cpp  roi_crop.cpp  statistical_filter.cpp  voxel_downsample.cpp
docs/: GUI集成接口.md  参数配置说明.md  开发进程总结.md
file/: 点云预处理调研以及路线规划.md
scripts/: generate_test_data.py  viz_compare.py  viz_result.py
